# Automaton-Auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  POWERSHELL_EXAMPLES.md  QUICK_START.md  README.md  RUN_AUDIT.md  USAGE_GUIDE.md  docker-compose.yml  pyproject.toml  test_imports.py
audit/: .gitkeep  report_1772330275.md
audit/report_onpeer_generated/: peer_audit_martha-ketsela-mengistu_20260301_052733.md
reports/: final_report.md  interim_report.md
scripts/: peer_audit.py  self_audit.py
src/: __init__.py  graph.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py
tests/: __init__.py  test_detectives.py
