[project]
name = "automaton-auditor"
version = "0.1.0"
description = "A hierarchical swarm of agents for code auditing"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automaton_auditor"]
