[project]
name = "automaton-auditor"
version = "0.1.0"
description = "A hierarchical swarm of agents for code auditing"
requires-python = ">=3.14"
dependencies = [
    "black>=26.1.0",
    "gitingest>=0.3.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automaton_auditor"]
